[package]
name = "eggs"
version = "0.1.0"
description = "EGGS token program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eggs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0" 
mpl-token-metadata = "2.0.0"